{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 41,
  "lineage": "0ae41211-72aa-ed57-0feb-a59c8999c4d7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgate_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f9106f4ed110561",
            "association_id": "eipassoc-030cf37c5e3e4c570",
            "domain": "vpc",
            "id": "eipalloc-02f9106f4ed110561",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0d8421f56d87c5170",
            "private_dns": "ip-10-0-1-195.us-west-2.compute.internal",
            "private_ip": "10.0.1.195",
            "public_dns": "ec2-35-81-6-133.us-west-2.compute.amazonaws.com",
            "public_ip": "35.81.6.133",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgate_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e10f18689a105679",
            "association_id": "eipassoc-0e04c5ad24e5f97f5",
            "domain": "vpc",
            "id": "eipalloc-0e10f18689a105679",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0daee16c009b67909",
            "private_dns": "ip-10-0-2-97.us-west-2.compute.internal",
            "private_ip": "10.0.2.97",
            "public_dns": "ec2-35-167-162-31.us-west-2.compute.amazonaws.com",
            "public_ip": "35.167.162.31",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress_instance_a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f7912c15ca96832",
            "arn": "arn:aws:ec2:us-west-2:157460745125:instance/i-0db19304b666dd6d3",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db19304b666dd6d3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-071b9b14bff53e981",
            "private_dns": "ip-10-0-11-47.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.47",
            "public_dns": "ec2-34-221-26-103.us-west-2.compute.amazonaws.com",
            "public_ip": "34.221.26.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03ad54e54a704236a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0002b1b96f31ee44e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02349d6e751850997",
            "tags": {
              "Name": "WordPress_Instance_private_A1"
            },
            "tags_all": {
              "Name": "WordPress_Instance_private_A1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0002b1b96f31ee44e"
            ]
          },
          "dependencies": [
            "aws_security_group.wordpress_security_group",
            "aws_subnet.private_a1",
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress_instance_b1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f7912c15ca96832",
            "arn": "arn:aws:ec2:us-west-2:157460745125:instance/i-08a4dcbfcc1ad5b1b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a4dcbfcc1ad5b1b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03ce0a579cd9a6668",
            "private_dns": "ip-10-0-21-194.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.21.194",
            "public_dns": "ec2-34-216-246-166.us-west-2.compute.amazonaws.com",
            "public_ip": "34.216.246.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04b85640b5ddfcf39",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0002b1b96f31ee44e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-087fb5858bf71bf3e",
            "tags": {
              "Name": "WordPress_Instance_private_B1"
            },
            "tags_all": {
              "Name": "WordPress_Instance_private_B1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0002b1b96f31ee44e"
            ]
          },
          "dependencies": [
            "aws_security_group.wordpress_security_group",
            "aws_subnet.private_b1",
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "intgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:157460745125:internet-gateway/igw-09c66437c6f64aacf",
            "id": "igw-09c66437c6f64aacf",
            "owner_id": "157460745125",
            "tags": {
              "Name": "Internet Gateway"
            },
            "tags_all": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-0fcd846134c678da1"
          },
          "dependencies": [
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgate_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f9106f4ed110561",
            "association_id": "eipassoc-030cf37c5e3e4c570",
            "connectivity_type": "public",
            "id": "nat-0a52ad65098bb0c84",
            "network_interface_id": "eni-0d8421f56d87c5170",
            "private_ip": "10.0.1.195",
            "public_ip": "35.81.6.133",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03991a4b7a83a35f8",
            "tags": {
              "Name": "NatGateway_A"
            },
            "tags_all": {
              "Name": "NatGateway_A"
            }
          },
          "dependencies": [
            "aws_eip.natgate_a",
            "aws_subnet.public_a",
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgate_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e10f18689a105679",
            "association_id": "eipassoc-0e04c5ad24e5f97f5",
            "connectivity_type": "public",
            "id": "nat-01efffd0957bf54cf",
            "network_interface_id": "eni-0daee16c009b67909",
            "private_ip": "10.0.2.97",
            "public_ip": "35.167.162.31",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0efe656f60964a40e",
            "tags": {
              "Name": "NatGateway_B"
            },
            "tags_all": {
              "Name": "NatGateway_B"
            }
          },
          "dependencies": [
            "aws_eip.natgate_b",
            "aws_subnet.public_b",
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:157460745125:route-table/rtb-0c1fd64c4b987672c",
            "id": "rtb-0c1fd64c4b987672c",
            "owner_id": "157460745125",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a52ad65098bb0c84",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fcd846134c678da1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgate_a",
            "aws_nat_gateway.natgate_a",
            "aws_subnet.public_a",
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:157460745125:route-table/rtb-0b13d0867198d4cf0",
            "id": "rtb-0b13d0867198d4cf0",
            "owner_id": "157460745125",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a52ad65098bb0c84",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fcd846134c678da1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgate_a",
            "aws_nat_gateway.natgate_a",
            "aws_subnet.public_a",
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:157460745125:route-table/rtb-00d043f6c0e71ab70",
            "id": "rtb-00d043f6c0e71ab70",
            "owner_id": "157460745125",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01efffd0957bf54cf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fcd846134c678da1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgate_b",
            "aws_nat_gateway.natgate_b",
            "aws_subnet.public_b",
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:157460745125:route-table/rtb-0e0e82f880a68fd84",
            "id": "rtb-0e0e82f880a68fd84",
            "owner_id": "157460745125",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01efffd0957bf54cf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fcd846134c678da1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgate_b",
            "aws_nat_gateway.natgate_b",
            "aws_subnet.public_b",
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:157460745125:route-table/rtb-00205633be65ee847",
            "id": "rtb-00205633be65ee847",
            "owner_id": "157460745125",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09c66437c6f64aacf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route_Table_Public_A"
            },
            "tags_all": {
              "Name": "Route_Table_Public_A"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcd846134c678da1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.intgw",
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:157460745125:route-table/rtb-0387ff89e37f7c7c6",
            "id": "rtb-0387ff89e37f7c7c6",
            "owner_id": "157460745125",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09c66437c6f64aacf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route_Table_Public_B"
            },
            "tags_all": {
              "Name": "Route_Table_Public_B"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcd846134c678da1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.intgw",
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a1_route_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbf482a47020ede0",
            "route_table_id": "rtb-0c1fd64c4b987672c",
            "subnet_id": "subnet-02349d6e751850997"
          },
          "dependencies": [
            "aws_eip.natgate_a",
            "aws_nat_gateway.natgate_a",
            "aws_route_table.private_a1",
            "aws_subnet.private_a1",
            "aws_subnet.public_a",
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a2_route_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07518a2c735bd9ee1",
            "route_table_id": "rtb-0b13d0867198d4cf0",
            "subnet_id": "subnet-0c6ea19693bf0e6d5"
          },
          "dependencies": [
            "aws_eip.natgate_a",
            "aws_nat_gateway.natgate_a",
            "aws_route_table.private_a2",
            "aws_subnet.private_a2",
            "aws_subnet.public_a",
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce5bcff1cab73c4c",
            "route_table_id": "rtb-00205633be65ee847",
            "subnet_id": "subnet-03991a4b7a83a35f8"
          },
          "dependencies": [
            "aws_internet_gateway.intgw",
            "aws_route_table.public_a",
            "aws_subnet.public_a",
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b1_route_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdc8558a1735f57c",
            "route_table_id": "rtb-00d043f6c0e71ab70",
            "subnet_id": "subnet-087fb5858bf71bf3e"
          },
          "dependencies": [
            "aws_eip.natgate_b",
            "aws_nat_gateway.natgate_b",
            "aws_route_table.private_b1",
            "aws_subnet.private_b1",
            "aws_subnet.public_b",
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b2_route_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001a24d2c0fe56a73",
            "route_table_id": "rtb-0e0e82f880a68fd84",
            "subnet_id": "subnet-0df019ed45b003f7b"
          },
          "dependencies": [
            "aws_eip.natgate_b",
            "aws_nat_gateway.natgate_b",
            "aws_route_table.private_b2",
            "aws_subnet.private_b2",
            "aws_subnet.public_b",
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fe08378000b1e6b",
            "route_table_id": "rtb-0387ff89e37f7c7c6",
            "subnet_id": "subnet-0efe656f60964a40e"
          },
          "dependencies": [
            "aws_internet_gateway.intgw",
            "aws_route_table.public_b",
            "aws_subnet.public_b",
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:157460745125:security-group/sg-0002b1b96f31ee44e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0002b1b96f31ee44e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240328010601941700000001",
            "name_prefix": "terraform-",
            "owner_id": "157460745125",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fcd846134c678da1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:157460745125:subnet/subnet-02349d6e751850997",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02349d6e751850997",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "157460745125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_a1"
            },
            "tags_all": {
              "Name": "Private_Subnet_a1"
            },
            "vpc_id": "vpc-0fcd846134c678da1"
          },
          "dependencies": [
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:157460745125:subnet/subnet-0c6ea19693bf0e6d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6ea19693bf0e6d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "157460745125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_a2"
            },
            "tags_all": {
              "Name": "Private_Subnet_a2"
            },
            "vpc_id": "vpc-0fcd846134c678da1"
          },
          "dependencies": [
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:157460745125:subnet/subnet-087fb5858bf71bf3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087fb5858bf71bf3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "157460745125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_B1"
            },
            "tags_all": {
              "Name": "Private_Subnet_B1"
            },
            "vpc_id": "vpc-0fcd846134c678da1"
          },
          "dependencies": [
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:157460745125:subnet/subnet-0df019ed45b003f7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df019ed45b003f7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "157460745125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_B2"
            },
            "tags_all": {
              "Name": "Private_Subnet_B2"
            },
            "vpc_id": "vpc-0fcd846134c678da1"
          },
          "dependencies": [
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:157460745125:subnet/subnet-03991a4b7a83a35f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03991a4b7a83a35f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "157460745125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_A"
            },
            "tags_all": {
              "Name": "Public_Subnet_A"
            },
            "vpc_id": "vpc-0fcd846134c678da1"
          },
          "dependencies": [
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:157460745125:subnet/subnet-0efe656f60964a40e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efe656f60964a40e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "157460745125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_B"
            },
            "tags_all": {
              "Name": "Public_Subnet_B"
            },
            "vpc_id": "vpc-0fcd846134c678da1"
          },
          "dependencies": [
            "aws_vpc.main_Microservice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_Microservice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:157460745125:vpc/vpc-0fcd846134c678da1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06b2a39e8d181c7e0",
            "default_route_table_id": "rtb-0cf7724999d870124",
            "default_security_group_id": "sg-090a90bde0ced9697",
            "dhcp_options_id": "dopt-0d46251115b1f9850",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fcd846134c678da1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf7724999d870124",
            "owner_id": "157460745125",
            "tags": {
              "Name": "Main_Microservice"
            },
            "tags_all": {
              "Name": "Main_Microservice"
            }
          }
        }
      ]
    }
  ]
}